# fast-api-quickstart

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml  environment.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: a9867834f63b_create_artist_and_album_tables.py
myproject/: config.py  errors.py  server.py
myproject/db/: albums.py  artists.py  connection.py
myproject/services/: albums.py  artists.py
myproject/tests/: test_api.py
records/: config.py  errors.py  models.py  server.py
records/db/: albums.py  artists.py  connection.py  manage_db.py
records/services/: albums.py  artists.py
records/tests/: conftest.py  test_api.py
scripts/: create_db.sh  create_db.sql  run_tests.sh  tests_up.sh
scripts/db/: README.md
scripts/postgres-init-files/: 01-create-tables.sql  01-create_db.sql
sql/: README.md
