[tool.poetry]
name = "fast-api-qs"
version = "0.0.1"
description = "Quickstart repo for getting FastAPI running"
authors = ["Daniel Riggs <daniel.riggs1@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.10.4"
fastapi = "^0.78.0"
black = "^22.3.0"
mypy = "^0.960"
pre-commit = "^2.19.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
