[tool.poetry]
name = "fast-api-qs"
version = "0.0.1"
description = "Quickstart repo for FastAPI"
authors = ["Daniel Riggs <daniel.riggs1@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.10.4"
fastapi = "^0.78.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
pytest = "^7.1.2"
asyncpg = "^0.25.0"
pytest-asyncio = "^0.18.3"
alembic = "^1.8.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
mypy = "^0.960"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
