[tool.poetry]
name = "fast-api-qs"
version = "0.0.1"
description = "Quickstart repo for FastAPI"
authors = ["Daniel Riggs <daniel.riggs1@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">3.10.4,<3.13"
pytest = ">=7.0.0,<8"
pytest-asyncio = "^0.23.4"
fastapi = "^0.109.1"
asyncpg = "^0.29.0"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
mypy = "^1.8.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core>=1.7.1"]
build-backend = "poetry.core.masonry.api"
